tests/samples/negative/types/array_repeat_non_copy.ax
module array_repeat_non_copy;

struct File {
    fd: i32;
}

impl Drop for File {
    fn drop(self: deinit File) -> void {}
}

fn make_file() -> File {
    return File { fd: 1 };
}

fn main() -> i32 {
    let files: [2]File = [make_file(); 2];
    return 0;
}
